--- a/.github/workflows/fourth.yml
+++ b/.github/workflows/fourth.yml
@@ -18,7 +18,7 @@ jobs:
           node-version: 14
 
       - name: Install project dependencies
-        run: npm ci
+        run: npm install
 
       - name: Build the project
         run: npm run build
