--- a/.github/workflows/fourth.yml
+++ b/.github/workflows/fourth.yml
@@ -21,7 +21,7 @@ jobs:
         run: npm install
 
       - name: Build the project
-        run: npm run build --if-present
+        run: npm run build
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@4.1.0
